notes update